cmake_minimum_required(VERSION 3.28)
project(CppPractice)

set(CMAKE_CXX_STANDARD 20)

add_executable(CppPractice main.cpp
        huawei/GetHexString.cpp
        huawei/Solution.h
        utils/sort_utils.cpp
        huawei/FanSort.h
        utils/sort_utils.h
        CodeTemplate.cpp
        huawei/Fib.cpp
        basic/string_test.cpp
        basic/array_test.cpp
        basic/vector_test.cpp
        leetcode/permutation.cpp
        leetcode/bubble_sort.cpp
        utils/print_utils.cpp
        utils/print_utils.h
        basic/map_test.cpp
        leetcode/two_sum.cpp
        basic/stack_test.cpp
        leetcode/group_anagrams.cpp
        basic/math_test.cpp
        huawei/Solution.cpp
        huawei/get_min_price_diff.cpp
        huawei/a+b.cpp
        huawei/ScalingSys.cpp
        huawei/MergeCmds.cpp
        huawei/print_all.cpp
        huawei/TimerSystem.cpp
        huawei/done/backspace.cpp
        huawei/stack_calculator.cpp
        huawei/done/filename_gen.cpp
        huawei/three_points.cpp
        basic/another.cpp
        basic/list_test.cpp
        leetcode/find_kth.cpp
        basic/queue_test.cpp
        basic/sort_test.cpp
        leetcode/lru.cpp
        basic/tuple_test.cpp
        basic/construct_test.cpp
        leetcode/intersection_node.cpp
        leetcode/reverse_node.cpp
        basic/heap.cpp
        leetcode/topk_frequent.cpp
        huawei/Gift_Combo.cpp
        huawei/done/Mini_Order_System.cpp
        huawei/ARP_miss_cache.cpp
        huawei/done/call_whitelist.cpp
        basic/set_test.cpp
        basic/regex_test.cpp
        huawei/done/binary_max_len.cpp
        huawei/done/text_editor.cpp
        basic/playground.cpp
        huawei/done/calc_area.cpp
        huawei/done/longest_aeiou.cpp
        huawei/done/get_diff_cnt.cpp
        leetcode/longest_substring.cpp
        huawei/done/server_min_lag.cpp
        huawei/find_same_weight.cpp
        basic/permutation_test.cpp
        basic/number_test.cpp
)
