cmake_minimum_required(VERSION 3.28)
project(CppPractice)

set(CMAKE_CXX_STANDARD 20)

add_executable(CppPractice main.cpp
        utils/sort_utils.cpp
        huawei/FanSort.h
        utils/sort_utils.h
        CodeTemplate.cpp
        basic/string_test.cpp
        basic/vector_test.cpp
        leetcode/full_permutation.cpp
        leetcode/bubble_sort.cpp
        utils/print_utils.cpp
        utils/print_utils.h
        basic/map_test.cpp
        leetcode/two_sum.cpp
        basic/stack_test.cpp
        leetcode/group_anagrams.cpp
        huawei/get_min_price_diff.cpp
        huawei/a+b.cpp
        huawei/ScalingSys.cpp
        huawei/MergeCmds.cpp
        huawei/print_all.cpp
        huawei/done/TimerSystem.cpp
        huawei/done/backspace.cpp
        huawei/stack_calculator.cpp
        huawei/done/filename_gen.cpp
        huawei/three_points.cpp
        basic/another.cpp
        basic/list_test.cpp
        leetcode/find_kth.cpp
        basic/priority_queue_test.cpp
        basic/sort_test.cpp
        leetcode/lru.cpp
        basic/tuple_test.cpp
        basic/construct_test.cpp
        leetcode/intersection_node.cpp
        leetcode/reverse_node.cpp
        basic/heap.cpp
        leetcode/topk_frequent.cpp
        huawei/Gift_Combo.cpp
        huawei/done/Mini_Order_System.cpp
        huawei/done/ARP_miss_cache.cpp
        huawei/done/call_whitelist.cpp
        basic/set_test.cpp
        basic/regex_test.cpp
        huawei/done/binary_max_len.cpp
        huawei/done/text_editor.cpp
        huawei/done/calc_area.cpp
        huawei/done/longest_aeiou.cpp
        huawei/done/get_diff_cnt.cpp
        leetcode/longest_substring.cpp
        huawei/done/server_min_lag.cpp
        huawei/find_same_weight.cpp
        basic/permutation_test.cpp
        basic/number_test.cpp
        huawei/dianliu_sample.cpp
        huawei/words_matchII.cpp
        basic/deque_test.cpp
        leetcode/subsets.cpp
        basic/queue_test.cpp
        basic/main1.cpp
        basic/main2.cpp
        basic/hex_binary_test.cpp
        basic/main3.cpp
        huawei/done/baowen.cpp
        huawei/Assets_sys.cpp
        basic/coro_test.cpp
        huawei/done/min_price.cpp
        huawei/done/filename_generator.cpp
        huawei/done/max_mask_output.cpp
        huawei/three_p.cpp
)
